--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,22 @@
   src: url('./font/imitation.ttf');
 }
 
-body{
+html,body{
   background-color: #dcd5c4  ;
   font-family: 'imitation-game';
   user-select: none;
+  padding: 0;
+  margin: 0;
 }
 
 .App {
   text-align: center;
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
+
+
 
 .grid-container {
   padding: 20px;
@@ -19,6 +26,7 @@ body{
   grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
   grid-gap: 5px;
   max-width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -52,12 +60,36 @@ body{
     color: #0000004c;
   }
 }
+@keyframes clueLoopTitle {
+  0% {
+    color: #2c2b28;
+  }
+
+  25% {
+    color: #ffffff;
+  }
+
+  50% {
+    color: #2c2b28;
+  }
+  100%{
+    color: #2c2b28;
+  }
+}
 
 .grid-item-clue{
   padding: 10px;
   text-align: center;
   color:#0000004c;
   animation: clueLoop 8s infinite;
+  cursor: pointer;
+}
+
+.grid-item-title-clue{
+  padding: 10px;
+  text-align: center;
+  color:#2c2b28;
+  animation: clueLoopTitle 8s infinite;
   cursor: pointer;
 }
 
