--- a/src/components/OverlayPage.css
+++ b/src/components/OverlayPage.css
@@ -31,6 +31,11 @@
     cursor: pointer;
 }
 
+.close-link{
+    text-decoration: none;
+    color: black;
+}
+
 .op-action-button{
     background-color: whitesmoke;
     margin: 40px;
@@ -47,7 +52,7 @@
     background-color: rgb(201, 201, 201);
 }
 
-.close-button:hover{
+.close-link:hover{
     color: rgba(0, 0, 0, 0.484);
 }
 
