--- a/src/components/OverlayPage.css
+++ b/src/components/OverlayPage.css
@@ -13,7 +13,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #dcd5c4;
+    background-color: #F1F6F9;
     display: block;
     justify-content: center;
     align-items: center;
@@ -50,11 +50,11 @@
 
 .close-link{
     text-decoration: none;
-    color: black;
+    color: #212A3E;
 }
 
 .op-action-button{
-    background-color: whitesmoke;
+    background-color: white;
     padding: 10px;
     border-radius: 10px;
     width: fit-content;
@@ -63,10 +63,12 @@
     justify-content: center;
     vertical-align: middle;
     align-items: center;
+    cursor: pointer;
 }
 
 .op-action-button-chip{
     margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .button-image{
@@ -81,15 +83,15 @@
 }
 
 .op-action-button:hover{
-    background-color: white;
+    background-color: #9BA4B5;
 }
 
 .op-action-button:active{
-    background-color: rgb(201, 201, 201);
+    background-color: #394867;
 }
 
 .close-link:hover{
-    color: rgba(0, 0, 0, 0.484);
+    color: #9BA4B5;
 }
 
 
